--- a/config.toml
+++ b/config.toml
@@ -272,7 +272,8 @@ defaultContentLanguageInSubdir = false
 
 [[menu.main]]
   name = "Publications"
-  url = "#publications_selected"
+ # url = "#publications_selected"
+  url = "#publications"
   weight = 2
 
 # [[menu.main]]
