--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,7 @@ defaultContentLanguageInSubdir = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Friedrich-Schiller University of Jena", url = "http://www.geographie.uni-jena.de/Julian.html" }, { name = "Bandung Institute of Technology", url = "https://www.itb.ac.id/staff/view/miga-magenika-julian-swe" } ]
+  organizations = [ { name = "Friedrich-Schiller University of Jena, Germany", url = "http://www.geographie.uni-jena.de/Julian.html" }, { name = "Bandung Institute of Technology, Indonesia", url = "https://www.itb.ac.id/staff/view/miga-magenika-julian-swe" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "miga4.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
